# type_safe

./: .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CNAME  LICENSE  README.md  conanfile.py  doc_arithmetic_policy.html  doc_boolean.html  doc_bounded_type.html  doc_compact_optional.html  doc_config.html  doc_constrained_type.html  doc_deferred_construction.html  doc_downcast.html  doc_flag.html  doc_flag_set.html  doc_floating_point.html  doc_index.html  doc_integer.html  doc_narrow_cast.html  doc_optional.html  doc_optional_ref.html  doc_output_parameter.html  doc_reference.html  doc_strong_typedef.html  doc_tagged_union.html  doc_types.html  doc_variant.html  doc_visitor.html  index.html  standardese_entities.html  standardese_files.html  standardese_modules.html
.github/workflows/: feature_ci.yml  main_ci.yml
cmake/: type_safe_standard_library_module.cmake
doc/: CMakeLists.txt  standardese.config
example/: CMakeLists.txt  constrained.cpp  optional.cpp  output_parameter.cpp  strong_typedef.cpp  types.cpp
include/type_safe/: arithmetic_policy.hpp  assert.hpp  boolean.hpp  bounded_type.hpp  compact_optional.hpp  config.hpp  constrained_type.hpp  constrained_value.hpp  deferred_construction.hpp  downcast.hpp  flag.hpp  flag_set.hpp  floating_point.hpp  index.hpp  integer.hpp  narrow_cast.hpp  optional.hpp  optional_ref.hpp  output_parameter.hpp  reference.hpp  strong_typedef.hpp  tagged_union.hpp  types.hpp  variant.hpp  visitor.hpp
include/type_safe/detail/: aligned_union.hpp  all_of.hpp  assert.hpp  assign_or_construct.hpp  constant_parser.hpp  copy_move_control.hpp  force_inline.hpp  is_nothrow_swappable.hpp  map_invoke.hpp  variant_impl.hpp
test/: CMakeLists.txt  arithmetic_policy.cpp  boolean.cpp  bounded_type.cpp  catch.hpp  compact_optional.cpp  constant_parser.cpp  constrained_type.cpp  debugger_type.hpp  deferred_construction.cpp  downcast.cpp  flag.cpp  flag_set.cpp  floating_point.cpp  index.cpp  integer.cpp  narrow_cast.cpp  optional.cpp  optional_ref.cpp  output_parameter.cpp  reference.cpp  strong_typedef.cpp  tagged_union.cpp  test.cpp  types.cpp  variant.cpp  visitor.cpp
test_package/: example.cpp
test_std_module/: CMakeLists.txt  test.cpp
